--- a/SponUI/Platforms/iOS/Info.plist
+++ b/SponUI/Platforms/iOS/Info.plist
@@ -27,6 +27,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>XSAppIconAssets</key>
-	<string>Assets.xcassets/appicon.appiconset</string>
+	<string>Assets.xcassets/logo_fullcolor.appiconset</string>
 </dict>
 </plist>
