--- a/SponUI/SponUI.csproj
+++ b/SponUI/SponUI.csproj
@@ -33,12 +33,15 @@
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-ios|AnyCPU'">
 	  <CreatePackage>false</CreatePackage>
 	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-ios|AnyCPU'">
+	  <CreatePackage>false</CreatePackage>
+	</PropertyGroup>
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+		<MauiIcon Include="Resources\AppIcon\logo_fullcolor.png" Color="White" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
+		<MauiSplashScreen Include="Resources\Splash\logo_fullcolor.png" Color="White" />
 
 		<!-- Images -->
 		<MauiFont Include="Resources\Fonts\*" />
@@ -64,4 +67,5 @@
 	  <MauiImage Include="Resources\Images\menu_icon.png" />
 	  <MauiImage Include="Resources\Images\message_icon.png" />
 	</ItemGroup>
+
 </Project>
