--- a/SponRest/appsettings.json
+++ b/SponRest/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "SqlConnection": "server=.; database=SponDb; Integrated Security=true; Encrypt=false;" }
 }
 
