--- a/SponRest/SponRest.csproj
+++ b/SponRest/SponRest.csproj
@@ -11,14 +11,22 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="Models\" />
     <None Remove="Enums\" />
+    <None Remove="Context\" />
+    <None Remove="Contracts\" />
+    <None Remove="Repository\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Enums\" />
+    <Folder Include="Context\" />
+    <Folder Include="Contracts\" />
+    <Folder Include="Repository\" />
   </ItemGroup>
 </Project>
