--- a/SponRest/appsettings.json
+++ b/SponRest/appsettings.json
@@ -6,6 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "SqlConnection": "server=.; database=SponDb; Integrated Security=true; Encrypt=false;" }
+  "ConnectionStrings": {
+    "SqlConnection": "Server=tcp:spon.database.windows.net,1433;Initial Catalog=SponDb;Persist Security Info=False;User ID=gianlouier97;Password=Kronos97!@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
 
