--- a/SponUI/SponUI.csproj
+++ b/SponUI/SponUI.csproj
@@ -12,7 +12,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 
 		<!-- Display name -->
-		<ApplicationTitle>SponUI</ApplicationTitle>
+		<ApplicationTitle>Spon</ApplicationTitle>
 
 		<!-- App Identifier -->
 		<ApplicationId>com.companyname.sponui</ApplicationId>
@@ -42,39 +42,29 @@
 		<MauiIcon Include="Resources\AppIcon\logo_fullcolor.svg" ForegroundScale="0.65" Color="White" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\logo_fullcolor.svg" Resize="false" Color="White" />
+		<MauiSplashScreen Include="Resources\Splash\logo_fullcolor.svg" />
 
-		<!-- Images -->
-		<MauiFont Include="Resources\Fonts\*" />
+		<!--Fonts -->
+		<MauiFont Include="Resources\Fonts\*">
+
+        </MauiFont>
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
-		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <MauiImage Include="Resources\Images\*" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <MauiImage Include="Resources\Images\create_event_icon.svg" />
-	  <MauiImage Include="Resources\Images\logo_fullcolor.svg" />
-	  <MauiImage Include="Resources\Images\menu_icon.svg" />
-	  <MauiImage Include="Resources\Images\message_icon.svg" />
-	  <MauiImage Include="Resources\Images\default_image.png" />
-	  <MauiImage Include="Resources\Images\defaultpp.png" />
-	  <MauiImage Include="Resources\Images\bowling.svg" />
-	  <MauiImage Include="Resources\Images\hiking_trail.svg" />
+		<PackageReference Include="RestSharp" Version="110.2.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Folder Include="Models\" />
 	  <Folder Include="ViewModel\" />
 	  <Folder Include="Enums\" />
+	  <Folder Include="Resources\Images\" />
+	  <Folder Include="Resources\Raw\" />
 	</ItemGroup>
 	
 	<ItemGroup>
@@ -98,4 +88,11 @@
 	  <MauiFont Include="Resources\Fonts\Kanit-ThinItalic.ttf" />
 	</ItemGroup>
 	
+	<ItemGroup>
+	  <MauiImage Include="Resources\Images\default_image.png" />
+	  <MauiImage Include="Resources\Images\defaultpp.png" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Remove="Resources\Raw\" />
+	</ItemGroup>
 </Project>
