--- a/SponUI/Platforms/Android/AndroidManifest.xml
+++ b/SponUI/Platforms/Android/AndroidManifest.xml
@@ -3,5 +3,5 @@
 	<application android:allowBackup="true" android:roundIcon="@mipmap/logo_fullcolor_round" android:supportsRtl="true" android:label="SponUI" android:icon="@mipmap/logo_fullcolor"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-sdk />
+	<uses-sdk android:minSdkVersion="21" />
 </manifest>
