--- a/SponUI/SponUI.csproj
+++ b/SponUI/SponUI.csproj
@@ -42,14 +42,20 @@
 		<MauiIcon Include="Resources\AppIcon\logo_fullcolor.svg" ForegroundScale="0.65" Color="White" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\logo_fullcolor.svg" />
+		<MauiSplashScreen Include="Resources\Splash\logo_fullcolor.svg"/>
 
 		<!--Fonts -->
-		<MauiFont Include="Resources\Fonts\*">
-
-        </MauiFont>
+		<MauiFont Include="Resources\Fonts\*"></MauiFont>
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
+	</ItemGroup>
+	<ItemGroup>
+	  <AndroidResource Remove="Resources\Raw\**" />
+	  <Compile Remove="Resources\Raw\**" />
+	  <EmbeddedResource Remove="Resources\Raw\**" />
+	  <MauiCss Remove="Resources\Raw\**" />
+	  <MauiXaml Remove="Resources\Raw\**" />
+	  <None Remove="Resources\Raw\**" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -63,8 +69,6 @@
 	  <Folder Include="Models\" />
 	  <Folder Include="ViewModel\" />
 	  <Folder Include="Enums\" />
-	  <Folder Include="Resources\Images\" />
-	  <Folder Include="Resources\Raw\" />
 	</ItemGroup>
 	
 	<ItemGroup>
@@ -91,8 +95,9 @@
 	<ItemGroup>
 	  <MauiImage Include="Resources\Images\default_image.png" />
 	  <MauiImage Include="Resources\Images\defaultpp.png" />
-	</ItemGroup>
-	<ItemGroup>
-	  <None Remove="Resources\Raw\" />
+    <MauiImage Include="Resources\Images\logo_fullcolor_image.svg" />
+    <MauiImage Include="Resources\Images\create_event_icon.svg"/>
+    <MauiImage Include="Resources\Images\menu_icon.svg"/>
+    <MauiImage Include="Resources\Images\message_icon.svg"/>
 	</ItemGroup>
 </Project>
