--- a/SponRest/SponRest.csproj
+++ b/SponRest/SponRest.csproj
@@ -29,6 +29,12 @@
     <None Remove="Dto\" />
     <None Remove="MapBox\" />
     <None Remove="MapBox\Matrix\" />
+    <None Remove="Service\" />
+    <None Remove="MapBox\Geocoding\" />
+    <None Remove="MapBox\Geocoding\Request\" />
+    <None Remove="MapBox\Searchbox\" />
+    <None Remove="MapBox\Searchbox\Request\" />
+    <None Remove="MapBox\Searchbox\Response\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
@@ -39,5 +45,11 @@
     <Folder Include="Dto\" />
     <Folder Include="MapBox\" />
     <Folder Include="MapBox\Matrix\" />
+    <Folder Include="Service\" />
+    <Folder Include="MapBox\Geocoding\" />
+    <Folder Include="MapBox\Geocoding\Request\" />
+    <Folder Include="MapBox\Searchbox\" />
+    <Folder Include="MapBox\Searchbox\Request\" />
+    <Folder Include="MapBox\Searchbox\Response\" />
   </ItemGroup>
 </Project>
