--- a/SponUI/SponUI.csproj
+++ b/SponUI/SponUI.csproj
@@ -42,7 +42,7 @@
 		<MauiIcon Include="Resources\AppIcon\logo_fullcolor.svg" ForegroundScale="0.65" Color="White" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\logo_fullcolor.svg"/>
+		<MauiSplashScreen Include="Resources\Splash\logo_fullcolor.svg" Color="White" />
 
 		<!--Fonts -->
 		<MauiFont Include="Resources\Fonts\*"></MauiFont>
@@ -56,6 +56,11 @@
 	  <MauiCss Remove="Resources\Raw\**" />
 	  <MauiXaml Remove="Resources\Raw\**" />
 	  <None Remove="Resources\Raw\**" />
+	  <None Remove="Util\" />
+	  <None Remove="Resources\Images\esc_btn.png" />
+	  <None Remove="Resources\Images\star.png" />
+	  <None Remove="Resources\Images\upload_image.png" />
+	  <None Remove="Resources\Images\gps_map.png" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -69,6 +74,7 @@
 	  <Folder Include="Models\" />
 	  <Folder Include="ViewModel\" />
 	  <Folder Include="Enums\" />
+	  <Folder Include="Util\" />
 	</ItemGroup>
 	
 	<ItemGroup>
@@ -95,9 +101,19 @@
 	<ItemGroup>
 	  <MauiImage Include="Resources\Images\default_image.png" />
 	  <MauiImage Include="Resources\Images\defaultpp.png" />
-    <MauiImage Include="Resources\Images\logo_fullcolor_image.svg" />
-    <MauiImage Include="Resources\Images\create_event_icon.svg"/>
-    <MauiImage Include="Resources\Images\menu_icon.svg"/>
-    <MauiImage Include="Resources\Images\message_icon.svg"/>
+      <MauiImage Include="Resources\Images\logo_fullcolor_image.svg" />
+      <MauiImage Include="Resources\Images\create_event_icon.svg" />
+      <MauiImage Include="Resources\Images\menu_icon.svg" />
+      <MauiImage Include="Resources\Images\message_icon.svg" />
+	  <MauiImage Include="Resources\Images\esc_btn.png" />
+	  <MauiImage Include="Resources\Images\star.png" />
+	  <MauiImage Include="Resources\Images\upload_image.png" />
+	  <MauiImage Include="Resources\Images\gps_map.png" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0-android'">
+	  <PackageReference Include="DevExpress.Maui.Editors" Version="23.1.3" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0-ios'">
+	  <PackageReference Include="DevExpress.Maui.Editors" Version="23.1.3" />
 	</ItemGroup>
 </Project>
