--- a/SponUI/Platforms/Android/AndroidManifest.xml
+++ b/SponUI/Platforms/Android/AndroidManifest.xml
@@ -1,7 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.sponui" android:versionCode="1" android:versionName="1.0">
-	<application android:allowBackup="true" android:roundIcon="@mipmap/logo_fullcolor_round" android:supportsRtl="true" android:label="SponUI" android:icon="@mipmap/logo_fullcolor"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.spon" android:versionCode="1" android:versionName="1.0">
+	<application android:allowBackup="true" android:roundIcon="@mipmap/logo_fullcolor_round" android:supportsRtl="true" android:label="Spon" android:icon="@mipmap/logo_fullcolor"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="32" />    
+	<!-- Required only if your app needs to access images or photos that other apps created -->
+	<uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+	<!-- Required only if your app needs to access videos that other apps created -->
+	<uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+	<!-- Required only if your app needs to access audio files that other apps created -->
+	<uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
 	<uses-sdk android:minSdkVersion="21" />
 </manifest>
